--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,65 @@
-html,body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.underline {
+  width: 10%;
+  border-bottom: 4px solid rgba(218, 165, 32);
+  border-radius: 4px;
+}
+
+.menu-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(218, 165, 32, 0.5);
+}
+
+.item-title {
+  font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  padding-bottom: 5px;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  border: 4px solid rgba(218, 165, 32);
+  border-radius: 0.6rem;
+}
+
+.item {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.item-desc {
+    text-align: justify;
 }
