--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 .underline {
   width: 10%;
-  border-bottom: 4px solid rgba(218, 165, 32);
+  border-bottom: 4px solid rgb(218, 165, 32);
   border-radius: 4px;
 }
 
@@ -49,7 +49,7 @@ body {
 img {
   width: 100%;
   height: auto;
-  border: 4px solid rgba(218, 165, 32);
+  border: 4px solid rgb(218, 165, 32);
   border-radius: 0.6rem;
 }
 
@@ -60,6 +60,13 @@ img {
   gap: 10px;
 }
 
+.item-price {
+  color: rgb(218, 165, 32);
+  font-size: 1.2rem;
+  padding-top: 2px;
+  font-weight: 600;
+}
+
 .item-desc {
-    text-align: justify;
+  text-align: justify;
 }
