--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,9 @@ body {
 
 .menu-items {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
   justify-content: center;
   align-items: center;
 }
@@ -44,17 +46,19 @@ body {
   font-weight: 600;
   letter-spacing: 2px;
   padding-bottom: 5px;
+  text-transform: capitalize;
 }
 
 img {
-  width: 100%;
-  height: auto;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
   border: 4px solid rgb(218, 165, 32);
   border-radius: 0.6rem;
 }
 
 .item {
-  width: 50%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   gap: 10px;
