add grid, fixed style

--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,11 @@ body {
 }
 
 .menu-items {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px 10px;
   align-items: center;
+  width: 85%;
 }
 
 .item-top {
@@ -51,16 +50,16 @@ body {
 
 img {
   width: 200px;
-  height: 200px;
-  object-fit: cover;
+  height: 150px;
   border: 4px solid rgb(218, 165, 32);
   border-radius: 0.6rem;
+  object-fit: cover;
+  aspect-ratio: 16/9;
 }
 
 .item {
-  width: 20%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
 }
 
@@ -72,5 +71,11 @@ img {
 }
 
 .item-desc {
+  font-size: 0.8rem;
   text-align: justify;
+  padding-top: 15px;
+}
+
+.right-desc {
+  padding-right: 10px;
 }
